--- a/github-api-01/gradle.properties
+++ b/github-api-01/gradle.properties
@@ -1,15 +1,15 @@
-awaitilityVersion = 1.7.0
+awaitilityVersion = 2.0.0
 guiceVersion      = 4.1.0
 hamcrestVersion   = 1.3
-jacksonVersion    = 2.7.5
+jacksonVersion    = 2.8.1
 jdeferredVersion  = 1.2.4
 jukitoVersion     = 1.4.1
 junitVersion      = 4.12
-lombokVersion     = 1.16.8
+lombokVersion     = 1.16.10
 mbassadorVersion  = 1.2.4.2
-mockitoVersion    = 2.0.80-beta
+mockitoVersion    = 2.0.111-beta
 reactfxVersion    = 2.0-M5
 retrofitVersion   = 2.0.0-beta2
 slf4jVersion      = 1.7.21
 testfxVersion     = 4.0.4-alpha
-wiremockVersion   = 2.1.4-rc3
+wiremockVersion   = 2.1.11
