Switch to Retrofit2

--- a/github-api-01/build.gradle
+++ b/github-api-01/build.gradle
@@ -39,8 +39,8 @@ dependencies {
     compile "org.reactfx:reactfx:2.0-M5"
     compile "org.slf4j:slf4j-api:$slf4jVersion"
     compile "org.jdeferred:jdeferred-core:$jdeferredVersion"
-    compile "com.squareup.retrofit:retrofit:$retrofitVersion"
-    compile "com.squareup.retrofit:converter-jackson:$retrofitVersion"
+    compile "com.squareup.retrofit2:retrofit:$retrofitVersion"
+    compile "com.squareup.retrofit2:converter-jackson:$retrofitVersion"
     compile "com.fasterxml.jackson.core:jackson-core:$jacksonVersion"
     compile "com.fasterxml.jackson.core:jackson-annotations:$jacksonVersion"
     compile "com.fasterxml.jackson.core:jackson-databind:$jacksonVersion"
