--- a/github-api-01/gradle.properties
+++ b/github-api-01/gradle.properties
@@ -9,7 +9,7 @@ lombokVersion     = 1.16.10
 mbassadorVersion  = 1.2.4.2
 mockitoVersion    = 2.1.0-beta.125
 reactfxVersion    = 2.0-M5
-retrofitVersion   = 2.0.0-beta2
+retrofitVersion   = 2.1.0
 slf4jVersion      = 1.7.21
 testfxVersion     = 4.0.4-alpha
 wiremockVersion   = 2.1.12
