Update mockito to 2.1.0 final

--- a/github-api-03/gradle.properties
+++ b/github-api-03/gradle.properties
@@ -6,7 +6,7 @@ jukitoVersion     = 1.4.1
 junitVersion      = 4.12
 lombokVersion     = 1.16.10
 mbassadorVersion  = 1.2.4.2
-mockitoVersion    = 2.1.0-RC.2
+mockitoVersion    = 2.1.0
 reactfxVersion    = 2.0-M5
 retrofitVersion   = 2.1.0
 rxjavaVersion     = 1.2.0
