--- a/github-api-04/gradle.properties
+++ b/github-api-04/gradle.properties
@@ -4,7 +4,7 @@ jacksonVersion    = 2.8.3
 junitVersion      = 4.12
 lombokVersion     = 1.16.10
 mbassadorVersion  = 1.2.4.2
-mockitoVersion    = 2.1.0-RC.2
+mockitoVersion    = 2.1.0
 reactfxVersion    = 2.0-M5
 retrofitVersion   = 2.1.0
 rxjavaVersion     = 1.2.0
