--- a/github-api-03/build.gradle
+++ b/github-api-03/build.gradle
@@ -48,7 +48,11 @@ dependencies {
     compile("com.google.inject:guice:$guiceVersion") {
         exclude group: 'org.sonatype.sisu.inject', module: 'cglib'
     }
-    compile "ru.vyarus:guice-ext-annotations:1.2.1"
+    compile 'ru.vyarus:guice-ext-annotations:1.2.1'
+    compile "org.kordamp.bootstrapfx:bootstrapfx-core:$bootstrapfxVersion"
+    compile "org.kordamp.ikonli:ikonli-javafx:$ikonliVersion"
+    compile "org.kordamp.ikonli:ikonli-typicons-pack:$ikonliVersion"
+    compile "com.miglayout:miglayout-javafx:$miglayoutVersion"
 
     runtime "org.slf4j:slf4j-simple:$slf4jVersion"
 
