--- a/github-api-05/gradle.properties
+++ b/github-api-05/gradle.properties
@@ -1,13 +1,16 @@
-awaitilityVersion = 2.0.0
-hamcrestVersion   = 1.3
-jacksonVersion    = 2.8.4
-junitVersion      = 4.12
-lombokVersion     = 1.16.10
-mbassadorVersion  = 1.3.0
-mockitoVersion    = 2.2.5
-reactfxVersion    = 2.0-M5
-retrofitVersion   = 2.1.0
-slf4jVersion      = 1.7.21
-springVersion     = 4.3.3.RELEASE
-testfxVersion     = 4.0.4-alpha
-wiremockVersion   = 2.2.1
+awaitilityVersion  = 2.0.0
+bootstrapfxVersion = 0.2.0
+hamcrestVersion    = 1.3
+ikonliVersion      = 1.8.0
+jacksonVersion     = 2.8.4
+junitVersion       = 4.12
+lombokVersion      = 1.16.10
+mbassadorVersion   = 1.3.0
+miglayoutVersion   = 5.0
+mockitoVersion     = 2.2.5
+reactfxVersion     = 2.0-M5
+retrofitVersion    = 2.1.0
+slf4jVersion       = 1.7.21
+springVersion      = 4.3.3.RELEASE
+testfxVersion      = 4.0.4-alpha
+wiremockVersion    = 2.2.1
