--- a/chat-01/gradle.properties
+++ b/chat-01/gradle.properties
@@ -1,17 +1,19 @@
 awaitilityVersion  = 2.0.0
 bootstrapfxVersion = 0.2.0
+easybindVersion    = 1.0.3
+flowlessVersion    = 0.5.1
+guiceVersion       = 4.1.0
 hamcrestVersion    = 1.3
 ikonliVersion      = 1.8.0
-jacksonVersion     = 2.8.4
+jdeferredVersion   = 1.2.4
+jukitoVersion      = 1.4.1
 junitVersion       = 4.12
+kryonetVersion     = 2.22.0-RC1
 lombokVersion      = 1.16.10
 mbassadorVersion   = 1.3.0
 miglayoutVersion   = 5.0
 mockitoVersion     = 2.2.6
 reactfxVersion     = 2.0-M5
-retrofitVersion    = 2.1.0
-rxjavaVersion      = 1.2.1
+richtextfxVersion  = 0.7-M2
 slf4jVersion       = 1.7.21
-springVersion      = 4.3.3.RELEASE
 testfxVersion      = 4.0.4-alpha
-wiremockVersion    = 2.2.1
