--- a/github-api-04/build.gradle
+++ b/github-api-04/build.gradle
@@ -38,10 +38,10 @@ dependencies {
     compile "net.engio:mbassador:$mbassadorVersion"
     compile "org.reactfx:reactfx:2.0-M5"
     compile "org.slf4j:slf4j-api:$slf4jVersion"
-    compile "io.reactivex:rxjava:$rxjavaVersion"
+    compile "io.reactivex.rxjava2:rxjava:$rxjavaVersion"
     compile "com.squareup.retrofit2:retrofit:$retrofitVersion"
     compile "com.squareup.retrofit2:converter-jackson:$retrofitVersion"
-    compile "com.squareup.retrofit2:adapter-rxjava:$retrofitVersion"
+    compile "com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0"
     compile "com.fasterxml.jackson.core:jackson-core:$jacksonVersion"
     compile "com.fasterxml.jackson.core:jackson-annotations:$jacksonVersion"
     compile "com.fasterxml.jackson.core:jackson-databind:$jacksonVersion"
