--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,10 @@
-.gradle
-.gradletasknamecache
-cobertura.ser
+.gradle/
 *.iml
 *.ipr
 *.iws
-.idea
-build
-out
-target
+.idea/
+build/
+out/
+target/
 .classpath
 .project
