--- a/todo-01/build.gradle
+++ b/todo-01/build.gradle
@@ -22,7 +22,7 @@ plugins {
     id 'application'
     id 'idea'
     id 'jacoco'
-    id 'net.ltgt.apt'                  version '0.9'
+    id 'net.ltgt.apt'                  version '0.10'
     id 'com.github.ben-manes.versions' version '0.14.0'
     id 'com.github.hierynomus.license' version '0.11.0'
     id 'org.kordamp.gradle.stats'      version '0.2.0'
@@ -56,6 +56,7 @@ dependencies {
     compile "com.fasterxml.jackson.core:jackson-annotations:$jacksonVersion"
     compile "com.fasterxml.jackson.core:jackson-databind:$jacksonVersion"
     compile "org.slf4j:slf4j-api:$slf4jVersion"
+    compile "com.google.guava:guava:$guavaVersion"
     compile("com.google.inject:guice:$guiceVersion") {
         exclude group: 'org.sonatype.sisu.inject', module: 'cglib'
     }
