--- a/todo-01/gradle.properties
+++ b/todo-01/gradle.properties
@@ -1,3 +1,4 @@
+guavaVersion       = 21.0
 guiceVersion       = 4.1.0
 h2Version          = 1.4.195
 hamcrestVersion    = 1.3
@@ -6,7 +7,7 @@ jacksonVersion     = 2.8.8
 jukitoVersion      = 1.5
 junitVersion       = 4.12
 lombokVersion      = 1.16.16
-mockitoVersion     = 2.8.8
+mockitoVersion     = 2.8.9
 restassuredVersion = 3.0.2
 slf4jVersion       = 1.7.25
 sparkjavaVersion   = 2.5.5
