Update Guava version to latest; apply APT plugin

--- a/chat-01/gradle.properties
+++ b/chat-01/gradle.properties
@@ -1,7 +1,8 @@
-awaitilityVersion  = 2.0.0
+awaitilityVersion  = 3.0.0
 bootstrapfxVersion = 0.2.1
 easybindVersion    = 1.0.3
 flowlessVersion    = 0.5.2
+guavaVersion       = 21.0
 guiceVersion       = 4.1.0
 hamcrestVersion    = 1.3
 ikonliVersion      = 1.9.0
@@ -12,7 +13,7 @@ kryonetVersion     = 2.22.0-RC1
 lombokVersion      = 1.16.16
 mbassadorVersion   = 1.3.0
 miglayoutVersion   = 5.0
-mockitoVersion     = 2.8.8
+mockitoVersion     = 2.8.9
 reactfxVersion     = 2.0-M5
 richtextfxVersion  = 0.7-M5
 slf4jVersion       = 1.7.25
