--- a/chat-01/subprojects/client/client.gradle
+++ b/chat-01/subprojects/client/client.gradle
@@ -25,15 +25,12 @@ dependencies {
     compile project(':shared')
 
     testCompileOnly "org.projectlombok:lombok:$lombokVersion"
-    compileOnly "org.projectlombok:lombok:$lombokVersion"
+    compileOnly     "org.projectlombok:lombok:$lombokVersion"
+    apt             "org.projectlombok:lombok:$lombokVersion"
+    testApt         "org.projectlombok:lombok:$lombokVersion"
 
-    compile "org.slf4j:slf4j-api:$slf4jVersion"
     compile "org.jdeferred:jdeferred-core:$jdeferredVersion"
     compile "net.engio:mbassador:$mbassadorVersion"
-    compile("com.google.inject:guice:$guiceVersion") {
-        exclude group: 'org.sonatype.sisu.inject', module: 'cglib'
-    }
-    compile 'ru.vyarus:guice-ext-annotations:1.2.1'
     compile "org.kordamp.bootstrapfx:bootstrapfx-core:$bootstrapfxVersion"
     compile "org.kordamp.ikonli:ikonli-javafx:$ikonliVersion"
     compile "org.kordamp.ikonli:ikonli-fontawesome-pack:$ikonliVersion"
@@ -45,8 +42,6 @@ dependencies {
     }
     compile "org.fxmisc.flowless:flowless:$flowlessVersion"
     compile "org.reactfx:reactfx:$reactfxVersion"
-
-    runtime "org.slf4j:slf4j-simple:$slf4jVersion"
 
     testCompile "junit:junit:$junitVersion"
     testCompile "org.mockito:mockito-core:$mockitoVersion"
