--- a/chat-01/subprojects/shared/shared.gradle
+++ b/chat-01/subprojects/shared/shared.gradle
@@ -19,7 +19,17 @@
 
 dependencies {
     testCompileOnly "org.projectlombok:lombok:$lombokVersion"
-    compileOnly "org.projectlombok:lombok:$lombokVersion"
+    compileOnly     "org.projectlombok:lombok:$lombokVersion"
+    apt             "org.projectlombok:lombok:$lombokVersion"
+    testApt         "org.projectlombok:lombok:$lombokVersion"
 
     compile "com.esotericsoftware:kryonet:$kryonetVersion"
+    compile "org.slf4j:slf4j-api:$slf4jVersion"
+    compile "com.google.guava:guava:$guavaVersion"
+    compile("com.google.inject:guice:$guiceVersion") {
+        exclude group: 'org.sonatype.sisu.inject', module: 'cglib'
+    }
+    compile 'ru.vyarus:guice-ext-annotations:1.2.1'
+
+    runtime "org.slf4j:slf4j-simple:$slf4jVersion"
 }
