--- a/chat-02/gradle.properties
+++ b/chat-02/gradle.properties
@@ -1,8 +1,9 @@
-awaitilityVersion  = 2.0.0
+awaitilityVersion  = 3.0.0
 bootstrapfxVersion = 0.2.1
 easybindVersion    = 1.0.3
 flowlessVersion    = 0.5.2
-grpcVersion        = 1.2.0
+grpcVersion        = 1.3.0
+guavaVersion       = 21.0
 guiceVersion       = 4.1.0
 hamcrestVersion    = 1.3
 ikonliVersion      = 1.9.0
@@ -12,8 +13,8 @@ junitVersion       = 4.12
 lombokVersion      = 1.16.16
 mbassadorVersion   = 1.3.0
 miglayoutVersion   = 5.0
-mockitoVersion     = 2.8.8
-protobufVersion    = 3.2.0
+mockitoVersion     = 2.8.9
+protobufVersion    = 3.3.0
 reactfxVersion     = 2.0-M5
 richtextfxVersion  = 0.7-M5
 slf4jVersion       = 1.7.25
