--- a/chat-03/subprojects/shared/shared.gradle
+++ b/chat-03/subprojects/shared/shared.gradle
@@ -19,10 +19,21 @@
 
 dependencies {
     testCompileOnly "org.projectlombok:lombok:$lombokVersion"
-    compileOnly "org.projectlombok:lombok:$lombokVersion"
+    compileOnly     "org.projectlombok:lombok:$lombokVersion"
+    apt             "org.projectlombok:lombok:$lombokVersion"
+    testApt         "org.projectlombok:lombok:$lombokVersion"
 
     compile 'javax.inject:javax.inject:1'
     compile "org.msgpack:jackson-dataformat-msgpack:$msgpackVersion"
     compile "org.msgpack:msgpack-core:$msgpackVersion"
     compile "org.zeromq:jeromq:$jeromqVersion"
+
+    compile "org.slf4j:slf4j-api:$slf4jVersion"
+    compile "com.google.guava:guava:$guavaVersion"
+    compile("com.google.inject:guice:$guiceVersion") {
+        exclude group: 'org.sonatype.sisu.inject', module: 'cglib'
+    }
+    compile 'ru.vyarus:guice-ext-annotations:1.2.1'
+
+    runtime "org.slf4j:slf4j-simple:$slf4jVersion"
 }
