--- a/chat-04/build.gradle
+++ b/chat-04/build.gradle
@@ -18,9 +18,10 @@
  */
 
 plugins {
+    id 'net.ltgt.apt'                  version '0.10'   apply false
     id 'com.github.ben-manes.versions' version '0.14.0' apply false
     id 'com.github.hierynomus.license' version '0.11.0' apply false
-    id 'org.kordamp.gradle.stats' version '0.2.0' apply false
+    id 'org.kordamp.gradle.stats'      version '0.2.0'  apply false
 }
 
 allprojects {
@@ -47,6 +48,7 @@ allprojects {
 
 subprojects {
     apply plugin: 'java'
+    apply plugin: 'net.ltgt.apt'
     apply plugin: 'com.github.hierynomus.license'
     apply plugin: 'org.kordamp.gradle.stats'
 
