--- a/chat-04/subprojects/server/server.gradle
+++ b/chat-04/subprojects/server/server.gradle
@@ -25,15 +25,9 @@ dependencies {
     compile project(':shared')
 
     testCompileOnly "org.projectlombok:lombok:$lombokVersion"
-    compileOnly "org.projectlombok:lombok:$lombokVersion"
-
-    compile "org.slf4j:slf4j-api:$slf4jVersion"
-    compile("com.google.inject:guice:$guiceVersion") {
-        exclude group: 'org.sonatype.sisu.inject', module: 'cglib'
-    }
-    compile 'ru.vyarus:guice-ext-annotations:1.2.1'
-
-    runtime "org.slf4j:slf4j-simple:$slf4jVersion"
+    compileOnly     "org.projectlombok:lombok:$lombokVersion"
+    apt             "org.projectlombok:lombok:$lombokVersion"
+    testApt         "org.projectlombok:lombok:$lombokVersion"
 
     testCompile "junit:junit:$junitVersion"
     testCompile "org.mockito:mockito-core:$mockitoVersion"
