--- a/github-api-03/gradle.properties
+++ b/github-api-03/gradle.properties
@@ -1,5 +1,6 @@
-awaitilityVersion  = 2.0.0
+awaitilityVersion  = 3.0.0
 bootstrapfxVersion = 0.2.1
+guavaVersion       = 21.0
 guiceVersion       = 4.1.0
 hamcrestVersion    = 1.3
 ikonliVersion      = 1.9.0
@@ -9,10 +10,10 @@ junitVersion       = 4.12
 lombokVersion      = 1.16.16
 mbassadorVersion   = 1.3.0
 miglayoutVersion   = 5.0
-mockitoVersion     = 2.8.8
+mockitoVersion     = 2.8.9
 reactfxVersion     = 2.0-M5
 retrofitVersion    = 2.2.0
-rxjavaVersion      = 2.0.9
+rxjavaVersion      = 2.1.0
 slf4jVersion       = 1.7.25
 testfxVersion      = 4.0.6-alpha
 wiremockVersion    = 2.5.1
