--- a/github-api-04/build.gradle
+++ b/github-api-04/build.gradle
@@ -22,6 +22,7 @@ plugins {
     id 'application'
     id 'idea'
     id 'jacoco'
+    id 'net.ltgt.apt'                  version '0.10'
     id 'com.github.ben-manes.versions' version '0.14.0'
     id 'com.github.hierynomus.license' version '0.11.0'
     id 'org.kordamp.gradle.stats' version '0.2.0'
