--- a/todo-02/gradle.properties
+++ b/todo-02/gradle.properties
@@ -1,17 +1,18 @@
 arquillianVersion       = 1.1.13.Final
 arquillianTomcatVersion = 1.0.0
+guavaVersion            = 22.0
 guiceVersion            = 4.1.0
 h2Version               = 1.4.195
 hamcrestVersion         = 1.3
-hikaricpVersion         = 2.6.1
+hikaricpVersion         = 2.6.2
 jacksonVersion          = 2.8.8
 javaeeapiVersion        = 7.0
 jukitoVersion           = 1.5
 junitVersion            = 4.12
 lombokVersion           = 1.16.16
-mockitoVersion          = 2.8.8
+mockitoVersion          = 2.8.9
 mustacheVersion         = 0.9.4
-restassuredVersion      = 3.0.2
+restassuredVersion      = 3.0.3
 shrinkwrapVersion       = 2.2.6
 slf4jVersion            = 1.7.25
 sql2oVersion            = 1.5.4
