--- a/github-api-01/build.gradle
+++ b/github-api-01/build.gradle
@@ -80,6 +80,9 @@ dependencies {
     testCompile "com.github.tomakehurst:wiremock:$wiremockVersion"
     testCompile "org.testfx:testfx-core:$testfxVersion"
     testCompile "org.testfx:testfx-junit:$testfxVersion"
+    testCompile "org.assertj:assertj-core:$assertjVersion"
+    testCompile "com.google.truth:truth:$truthVersion"
+    testCompile "org.jgotesting:jgotesting:$jgotestingVersion"
 }
 
 mainClassName = 'org.kordamp.javatrove.example01.Launcher'
