--- a/hello-pmvc/gradle.properties
+++ b/hello-pmvc/gradle.properties
@@ -1,19 +1,17 @@
+assertjVersion     = 3.8.0
 awaitilityVersion  = 3.0.0
 bootstrapfxVersion = 0.2.1
 guavaVersion       = 23.0
 guiceVersion       = 4.1.0
 hamcrestVersion    = 1.3
 ikonliVersion      = 2.0.0
-jacksonVersion     = 2.9.2
-jdeferredVersion   = 1.2.6
+jgotestingVersion  = 0.12
 jukitoVersion      = 1.5
 junitVersion       = 4.12
+junitParamsVersion = 1.1.0
 lombokVersion      = 1.16.18
-mbassadorVersion   = 1.3.1
 miglayoutVersion   = 5.0
 mockitoVersion     = 2.9.0
-reactfxVersion     = 2.0-M5
-retrofitVersion    = 2.3.0
 slf4jVersion       = 1.7.25
 testfxVersion      = 4.0.6-alpha
-wiremockVersion    = 2.9.0
+truthVersion       = 0.36
