--- a/github-api-01/gradle.properties
+++ b/github-api-01/gradle.properties
@@ -1,5 +1,6 @@
 awaitilityVersion  = 3.0.0
 bootstrapfxVersion = 0.2.1
+groovyVersion      = 2.4.12
 guavaVersion       = 23.0
 guiceVersion       = 4.1.0
 hamcrestVersion    = 1.3
@@ -15,5 +16,6 @@ mockitoVersion     = 2.9.0
 reactfxVersion     = 2.0-M5
 retrofitVersion    = 2.3.0
 slf4jVersion       = 1.7.25
+spockVersion       = 1.1-groovy-2.4
 testfxVersion      = 4.0.6-alpha
 wiremockVersion    = 2.9.0
