--- a/hello-pmvc/gradle.properties
+++ b/hello-pmvc/gradle.properties
@@ -1,6 +1,7 @@
 assertjVersion     = 3.8.0
 awaitilityVersion  = 3.0.0
 bootstrapfxVersion = 0.2.1
+groovyVersion      = 2.4.12
 guavaVersion       = 23.0
 guiceVersion       = 4.1.0
 hamcrestVersion    = 1.3
@@ -13,5 +14,6 @@ lombokVersion      = 1.16.18
 miglayoutVersion   = 5.0
 mockitoVersion     = 2.9.0
 slf4jVersion       = 1.7.25
+spockVersion       = 1.1-groovy-2.4
 testfxVersion      = 4.0.6-alpha
 truthVersion       = 0.36
