Add jgiven scenario

--- a/hello-pmvc/gradle.properties
+++ b/hello-pmvc/gradle.properties
@@ -6,6 +6,7 @@ guavaVersion       = 23.0
 guiceVersion       = 4.1.0
 hamcrestVersion    = 1.3
 ikonliVersion      = 2.0.0
+jgivenVersion      = 0.15.3
 jgotestingVersion  = 0.12
 jukitoVersion      = 1.5
 junitVersion       = 4.12
