--- a/hello-pmvc/build.gradle
+++ b/hello-pmvc/build.gradle
@@ -22,10 +22,10 @@ plugins {
     id 'application'
     id 'idea'
     id 'jacoco'
-    id 'net.ltgt.apt'                  version '0.10'
+    id 'net.ltgt.apt' version '0.10'
     id 'com.github.ben-manes.versions' version '0.15.0'
     id 'com.github.hierynomus.license' version '0.11.0'
-    id 'org.kordamp.gradle.stats'      version '0.2.0'
+    id 'org.kordamp.gradle.stats' version '0.2.0'
 }
 
 repositories {
@@ -47,9 +47,9 @@ dependencyUpdates.resolutionStrategy = {
 
 dependencies {
     testCompileOnly "org.projectlombok:lombok:$lombokVersion"
-    compileOnly     "org.projectlombok:lombok:$lombokVersion"
-    apt             "org.projectlombok:lombok:$lombokVersion"
-    testApt         "org.projectlombok:lombok:$lombokVersion"
+    compileOnly "org.projectlombok:lombok:$lombokVersion"
+    apt "org.projectlombok:lombok:$lombokVersion"
+    testApt "org.projectlombok:lombok:$lombokVersion"
 
     compile "org.slf4j:slf4j-api:$slf4jVersion"
     compile "com.google.guava:guava:$guavaVersion"
@@ -79,9 +79,10 @@ dependencies {
     testCompile("org.spockframework:spock-guice:$spockVersion") {
         exclude group: 'org.codehaus.groovy', module: 'groovy-all'
     }
-    testCompile( 'com.athaydes:spock-reports:1.3.2' ) {
+    testCompile('com.athaydes:spock-reports:1.3.2') {
         transitive = false
     }
+    testCompile "com.tngtech.jgiven:jgiven-junit:$jgivenVersion"
 }
 
 mainClassName = 'org.kordamp.javatrove.hello.pmvc.Launcher'
@@ -95,8 +96,8 @@ license {
         java = 'SLASHSTAR_STYLE'
         fxml = 'XML_STYLE'
     }
-    ext.year    = '2016-2017'
-    ext.author  = 'Andres Almiray'
+    ext.year = '2016-2017'
+    ext.author = 'Andres Almiray'
     ext.project = 'Java Trove Examples'
 }
 
@@ -125,3 +126,21 @@ idea {
         }
     }
 }
+
+test {
+    systemProperty 'jgiven.report.dir', 'build/reports/jgiven/json'
+    systemProperty 'jgiven.report.text', 'false'
+}
+
+task jgivenHtml5Report(type: JavaExec) {
+    main = 'com.tngtech.jgiven.report.ReportGenerator'
+    args '--sourceDir=build/reports/jgiven/json',
+        '--targetDir=build/reports/jgiven/html5',
+        '--format=html5',
+        '--exclude-empty-scenarios=true',
+        '--customcss=build/resources/test/jgiven/custom.css',
+        '--show-thumbnails=true'
+
+    classpath = configurations.testCompile
+}
+test.finalizedBy(jgivenHtml5Report)
