--- a/todo-02/gradle.properties
+++ b/todo-02/gradle.properties
@@ -1,19 +1,19 @@
-arquillianVersion       = 1.3.0.Final
-arquillianTomcatVersion = 1.0.0
+arquillianVersion       = 1.4.0.Final
+arquillianTomcatVersion = 1.0.1.Final
 guavaVersion            = 24.0-jre
-guiceVersion            = 4.1.0
+guiceVersion            = 4.2.0
 h2Version               = 1.4.196
 hamcrestVersion         = 1.3
-hikaricpVersion         = 2.7.7
+hikaricpVersion         = 2.7.8
 jacksonVersion          = 2.9.4
 javaeeapiVersion        = 8.0
 jukitoVersion           = 1.5
 junitVersion            = 4.12
 lombokVersion           = 1.16.20
-mockitoVersion          = 2.13.0
+mockitoVersion          = 2.15.0
 mustacheVersion         = 0.9.5
-restassuredVersion      = 3.0.6
-shrinkwrapVersion       = 3.1.2
+restassuredVersion      = 3.0.7
+shrinkwrapVersion       = 3.1.3
 slf4jVersion            = 1.7.25
 sql2oVersion            = 1.5.4
 tomcatVersion           = 8.5.14
