--- a/hello-pmvc/gradle.properties
+++ b/hello-pmvc/gradle.properties
@@ -1,20 +1,20 @@
 assertjVersion     = 3.11.1
 awaitilityVersion  = 3.1.2
-bootstrapfxVersion = 0.2.3
-groovyVersion      = 2.5.2
-guavaVersion       = 26.0-jre
+bootstrapfxVersion = 0.2.4
+groovyVersion      = 2.5.3
+guavaVersion       = 27.0-jre
 guiceVersion       = 4.2.1
 hamcrestVersion    = 1.3
 ikonliVersion      = 2.4.0
 jbehaveVersion     = 4.3.5
-jgivenVersion      = 0.15.3
+jgivenVersion      = 0.16.1
 jgotestingVersion  = 0.12
 jukitoVersion      = 1.5
 junitVersion       = 4.12
 junitParamsVersion = 1.1.1
 miglayoutVersion   = 5.2
-mockitoVersion     = 2.22.0
+mockitoVersion     = 2.23.0
 slf4jVersion       = 1.7.25
-spockVersion       = 9f24b12589
+spockVersion       = 1.2-groovy-2.5
 testfxVersion      = 4.0.8-alpha
 truthVersion       = 0.42
